// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseList Render expense list with expenses Success 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Market"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={1095}
      createdAt={-345600000}
      description="Rent Card"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4050}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`ExpenseList Render expense list with no expenses Success 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <p>
        No Expenses
      </p>
       
    </div>
  </div>
</div>
`;
